force-app/main/default/objects/JBT_RET_FINAID_UNRESOLVED__x.object
<CustomObject>
    <fields>
        <fullName>ACTION__c</fullName>
        <description>Data sourced from PS_SCC_CKLSITM_TBL.DESCR</description>
        <externalDeveloperName>ACTION</externalDeveloperName>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AID_YEAR__c</fullName>
        <description>Data sourced from PS_VAR_DATA_FINA.AID_YEAR</description>
        <externalDeveloperName>AID_YEAR</externalDeveloperName>
        <label>Aid Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHECKLIST_CD__c</fullName>
        <description>Data sourced from PS_PERSN_CHCKLST_C.CHECKLIST_CD</description>
        <externalDeveloperName>CHECKLIST_CD</externalDeveloperName>
        <label>Checklist Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHKLST_ITEM_CD__c</fullName>
        <description>Data sourced from PS_PERSN_CHK_ITM_C.CHKLST_ITEM_CD</description>
        <externalDeveloperName>CHKLST_ITEM_CD</externalDeveloperName>
        <label>Checklist Item Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Aid Indicator (external)</relationshipLabel>
        <relationshipName>Financial_Aid_Indicator_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>STATUS_DT__c</fullName>
        <description>Data sourced from PS_PERSN_CHK_ITM_C.STATUS_DT</description>
        <externalDeveloperName>STATUS_DT</externalDeveloperName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>Data sourced from PS_PSXLATITEM_C.XLATLONGNAME</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STRM__c</fullName>
        <description>Data sourced from PS_AID_YR_CAR_TERM.STRM</description>
        <externalDeveloperName>STRM</externalDeveloperName>
        <label>Term</label>
        <length>4</length>
        <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Financial Aid Indicator (external)</relationshipLabel>
        <relationshipName>Financial_Aid_Indicator_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/18NgOEzIfiKkbqa_UwxiT05evzNg3QIZiyvXX5QFIE7w/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>JBT_RET_FINAID_UNRESOLVED</externalName>
    <label>Financial Aid Unresolved Item (external)</label>
    <pluralLabel>Financial Aid Unresolved Item (external)</pluralLabel>
</CustomObject>